Updated Copy and changed glyphs to look like map points

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -279,7 +279,7 @@ a:after {
 	background-position: center center;
 	min-height: 650px;
 	width: 100%;
-	
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -393,7 +393,7 @@ a:after {
     background-size: cover;
 
     background-attachment: relative;
-    
+
     text-align: center;
 }
 
@@ -430,6 +430,14 @@ a:after {
 
 .divider6 {
 	background-image: url('../img/bg/divider6.jpg')
+}
+
+.divider6 h1 {
+  text-shadow: 2px 2px 2px #000;
+}
+
+.divider1 h1 {
+  text-shadow: 2px 2px 2px #000;
 }
 
 
@@ -516,7 +524,7 @@ a:after {
 	font-weight: 700;
 	text-align: left;
 	letter-spacing: 2px;
-	
+
 }
 
 .grid figcaption a {
@@ -591,7 +599,7 @@ a:after {
 	background: #2b2b2b;
 	padding-right: 0px;
 	padding-left: 0px;
-	
+
 }
 
 .blog-bg h4 {
@@ -634,4 +642,3 @@ a:after {
 		line-height: 38px;
 	}
 }
-
