--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -650,3 +650,19 @@ a:after {
 #map {
     height: 180px;
 }
+
+/*map css*/
+.ui-table.handsontable {
+  background:#fff;
+  position:absolute;
+  top:30px;
+  right:10px;
+  z-index:100;
+  width: 500px;
+  }
+.save {
+  position:absolute;
+  top:10px;
+  right:10px;
+  z-index:100
+  }
