--- a/views/map.html
+++ b/views/map.html
@@ -1,4 +1,12 @@
-<script language="javascript" type="text/javascript">
-var map = L.map('map').setView([51.505, -0.09], 13);
-</script>
-<div id="map"></div>
+<div ng-controller="uploadController">
+
+  <div>
+     <div id='table' class='ui-table'></div>
+  </div>
+  <div id='map'></div>
+  <!--TODO: Remove this if you don't need it
+    body { margin:0; padding:0; }
+    #map { position:absolute; top:0; bottom:0; width:100%; } -->
+  <button class="save" ng-click="saveTable()" >Save</button>
+
+</div>
