--- a/views/index.html
+++ b/views/index.html
@@ -221,9 +221,9 @@
           <img class="img img-circle" src="assets/img/team/team04.jpg" alt="Charles Marra" height="120px" width="120px" alt="">
           <br>
           <h4><b>Charles Marra</b></h4>
-          <a href="https://twitter.com/ASBuffalo" class="icon icon-twitter"></a>
-          <a href="https://www.facebook.com/AlgonquinStudios" class="icon icon-facebook"></a>
-          <p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. Quo nisl malis et. .</p>
+          <a href="https://twitter.com/cjmarra718" class="icon icon-twitter"></a>
+          <a href="https://www.facebook.com/cj.marra.39" class="icon icon-facebook"></a>
+          <p>Project Manager, Developer, Dad, Husband, Veteran. Focused on implementation and project completion. </p>
         </div><!-- col-lg-2 -->
 
         <div class="col-lg-2 centered">
