--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -656,14 +656,15 @@ a:after {
 .ui-table.handsontable {
   background:#fff;
   position:absolute;
-  top:30px;
+  top:130px;
   right:10px;
   z-index:100;
   width: 500px;
+  height: 550px;
   }
 .save {
   position:absolute;
-  top:10px;
+  top:100px;
   right:10px;
   z-index:100
   }
