Created Dynamic Routing for: #/profile/:userName #/map/:userName/:mapId
Changed #/map to
#/edit/:mapId

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,6 @@
 <div>
   <div class="greywrap">
     <br/><br/><br/>
-    Map: {{route.mapId}} User: {{route.userName}}
+    <h2>{{route.userName}}'s Profile</h2>
   </div>
 </div>
