lots of tweaks for maps and account and profile screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,6 @@ body {
     line-height: 1.4;
 }
 
-/*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
  * Customize the background color to match your design.
@@ -655,12 +654,10 @@ a:after {
 /*map css*/
 .ui-table.handsontable {
   background:#fff;
-  position:absolute;
   top:130px;
-  right:10px;
   z-index:100;
-  width: 500px;
-  height: 450px;
+  width: 100%;
+  height: 600px;
   }
 .save {
   position:absolute;
@@ -668,3 +665,6 @@ a:after {
   right:10px;
   z-index:100
   }
+
+
+
