--- a/views/edit.html
+++ b/views/edit.html
@@ -1,11 +1,10 @@
 <div>
   <div>
-    Map: {{route.mapId}} User: {{route.userName}}
+    Map: {{route.mapId}} 
   </div>
   <div>
      <div id='table' class='ui-table'></div>
   </div>
-  <div id='map'></div>
   <button class="save" ng-click="saveTable()" >Save</button>
 
 </div>
