--- a/views/map.html
+++ b/views/map.html
@@ -1,6 +1,3 @@
 <div>
-  <div class="greywrap">
-    <br/><br/><br/>
-    Map: {{route.mapId}} User: {{route.userName}}
-  </div>
+  <div id='map'></div>
 </div>
