--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,87 @@
-<div>
-  <div class="greywrap">
-    <br/><br/><br/>
-    <h2>{{route.userName}}'s Profile</h2>
-  </div>
+<div id="greywrap">
+  <div class="row">
+    <style>
+    .user-row {
+    margin-bottom: 14px;
+    }
+
+    .user-row:last-child {
+        margin-bottom: 0;
+    }
+
+    .dropdown-user {
+        margin: 13px 0;
+        padding: 5px;
+        height: 100%;
+    }
+
+    .dropdown-user:hover {
+        cursor: pointer;
+    }
+
+    .table-user-information > tbody > tr {
+        border-top: 1px solid rgb(221, 221, 221);
+    }
+
+    .table-user-information > tbody > tr:first-child {
+        border-top: 0;
+    }
+
+
+    .table-user-information > tbody > tr > td {
+        border-top: 0;
+    }
+    .toppad
+    {margin-top:20px;
+    }
+
+        
+    </style>
+    
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
+   
+   
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">{{viewUserProfile.name}}</h3>
+            </div>
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle"> </div>
+                
+                <div class=" col-md-9 col-lg-9 "> 
+                  <table class="table table-user-information">
+                    <tbody>
+                      <tr>
+                        <td>Email:</td>
+                        <td><a href="mailto:info@support.com">{{viewUserProfile.email}}</a></td>
+                      </tr>
+                      <tr>
+                        <td>Description:</td>
+                        <td>{{viewUserProfile.description}}</td>
+                      </tr>
+                      <tr>
+                        <td>Address</td>
+                        <td>{{viewUserProfile.address}}</td>
+                      </tr>
+                      <tr>
+                        <td>Phone</td>
+                        <td>{{viewUserProfile.phone}}</td>
+                      </tr>
+                      <tr>
+                        <td>Website</td>
+                        <td><a  target="_blank" href="{{viewUserProfile.website}}">{{viewUserProfile.website}}</a></td>
+                      </tr>
+                     
+                    </tbody>
+                  </table>
+                  
+                </div>
+              </div>
+            </div>
+
+            
+          </div>
+        </div>
+</div>
 </div>
