--- a/views/allmaps.html
+++ b/views/allmaps.html
@@ -3,7 +3,8 @@
     <h2>Maps</h2>
 
     <div ng-repeat="(username, user) in myMaps">
-        {{user.name}}
+        
+            <a href="/index.html#/profile/{{username}}">{{user.name}}</a>
         <div ng-repeat="(mapname, map) in user.maps">
             <a href="/index.html#/map/{{username}}/{{mapname}}">{{mapname}}</a>
             
