--- a/views/index.html
+++ b/views/index.html
@@ -76,74 +76,53 @@
         <!-- PORTFOLIO IMAGE 1 -->
         <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Map Name</h5>
+                <a href="#/map/simplelogin:3/200" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
         </div><!-- /col -->
 
-
-             <!-- MODAL SHOW THE PORTFOLIO IMAGE. In this demo, all links point to this modal. You should create
-                  a modal for each of your projects. -->
-
-              <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                      <h4 class="modal-title">Example Data Set</h4>
-                    </div>
-                    <div class="modal-body">
-                      <p><img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt=""></p>
-                      <p>Lorem ipsum dolor sit amet, falli choro sea an, ius eu nibh constituto, sit paulo nostro volumus cu.</p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                  </div><!-- /.modal-content -->
-                </div><!-- /.modal-dialog -->
-              </div><!-- /.modal -->
-
-
         <!-- PORTFOLIO IMAGE 2 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio02.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Map Name</h5>
+                <a href="#/map/simplelogin:3/200" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
         </div><!-- /col -->
 
         <!-- PORTFOLIO IMAGE 3 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio03.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
+                <h5>Map Name</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
         </div><!-- /col -->
-      </div><!-- /row -->
 
         <!-- PORTFOLIO IMAGE 4 -->
-      <div class="row">
         <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio04.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
+                <h5>Map Name</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
@@ -151,12 +130,13 @@
         </div><!-- /col -->
 
         <!-- PORTFOLIO IMAGE 5 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio05.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
+                <h5>Map Name</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
@@ -164,18 +144,18 @@
         </div><!-- /col -->
 
         <!-- PORTFOLIO IMAGE 6 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
             <div class="grid mask">
-            <figure>
-              <img class="img-responsive" src="assets/img/portfolio/folio06.jpg" alt="">
+            <figure class="embed-responsive embed-responsive-4by3">
+              <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Example Data Set</h5>
+                <h5>Map Name</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
         </div><!-- /col -->
-      </div><!-- /row -->
       <br>
       <br>
     </div><!-- /row -->
