--- a/views/map.html
+++ b/views/map.html
@@ -1,6 +1,6 @@
 <div>
 
-  <div id='map'></div>
+  <div id='map' class="fullscreen"></div>
   <button ng-click="AddMyPoint();" ng-show="AllowAnonAdd">Add my location</button>
 
 </div>
