--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -675,3 +675,11 @@ a:after {
   left:50px;
   z-index:100
   }
+
+/*edit map*/
+.config {
+  position:absolute;
+  top:100px;
+  left:10px;
+  z-index:100
+  }
