--- a/views/edit.html
+++ b/views/edit.html
@@ -1,10 +1,69 @@
 <div>
   <div>
-    Map: {{route.mapId}} 
+    Map: {{route.mapId}}
   </div>
   <div>
      <div id='table' class='ui-table'></div>
   </div>
-  <button class="save" ng-click="saveTable()" >Save</button>
+
+  <!-- Save Button -->
+  <button class="btn btn-success save" ng-click="saveTable()" >Save</button>
+  <!-- Map Details -->
+  <button data-toggle="modal" href="#myModal" class="btn btn-primary config">Configure</button>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Configure Your Map</h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+            <fieldset>
+                <legend>Map Options</legend>
+
+                <div class="form-group">
+                  <label class="col-xs-3 control-label" for="title">Map Title:</label>
+                  <div class="col-xs-6">
+                  <input id="title" name="title" type="text" ng-keypress="clear()" ng-model="title" placeholder="What's this map about?" class="form-control input-normal">
+                  <span class="help-block"></span>
+                  </div>
+                </div>
+
+                                <!-- Multiple Checkboxes (inline) -->
+                <div class="form-group">
+                  <label class="col-xs-3 control-label" for="checkboxes">Allow Others To Add Data?</label>
+                  <div class="col-xs-6">
+                    <label class="checkbox-inline" for="editable">
+                      <input type="checkbox" name="editable" id="editable" value="true">
+                    </label>
+                  </div>
+                </div>
+
+                <!-- Textarea -->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="instructions">Instructions:</label>
+                  <div class="col-md-6">
+                    <textarea class="form-control" id="instructions" name="Instructions" placeholder="Instructions for people who are adding points to the map."></textarea>
+                  </div>
+                </div>
+
+                <div class="col-xs-3">
+                  <button class="btn btn-success pull-right"  ng-click="save()">Save Changes</button><br />
+                </div>
+
+                <p class="error" ng-show="emailerr">{{emailerr}}</p>
+                <p class="good" ng-show="emailmsg">{{emailmsg}}</p>
+            </fieldset>
+        </form>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
 
 </div>
