Added Buffalo High Schools Map

--- a/views/index.html
+++ b/views/index.html
@@ -78,10 +78,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:7/0" alt="Buffalo High Schools" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a href="#/map/simplelogin:3/200" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Buffalo High Schools</h5>
+                <a href="#/map/simplelogin:7/0" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
