put in logic for map name

--- a/views/account.html
+++ b/views/account.html
@@ -119,7 +119,7 @@
     <h3>Maps</h3>
         <ul>
             <li ng-repeat="(mapname, map) in profile.maps">
-                <a href="/index.html#/map/{{profile.$id}}/{{mapname}}">{{mapname}}</a> [<a href="/index.html#/edit/{{mapname}}">edit</a>]
+                <a href="/index.html#/map/{{profile.$id}}/{{mapname}}">{{map.mapName}}</a> [<a href="/index.html#/edit/{{mapname}}">edit</a>]
                 
             </li>
         </ul>
