--- a/views/allmaps.html
+++ b/views/allmaps.html
@@ -6,7 +6,7 @@
         
             <a href="/index.html#/profile/{{username}}">{{user.name}}</a>
         <div ng-repeat="(mapname, map) in user.maps">
-            <a href="/index.html#/map/{{username}}/{{mapname}}">{{mapname}}</a>
+            <a href="/index.html#/map/{{username}}/{{mapname}}">{{map.mapName}}</a>
             
         </div>
     </div>
