--- a/views/map.html
+++ b/views/map.html
@@ -1,6 +1,71 @@
 <div>
 
   <div id='map' class="fullscreen"></div>
-  <button ng-click="AddMyPoint();" ng-show="AllowAnonAdd">Add my location</button>
+  <div id='addLocation'>
+      <button ng-click="showMyLocationModal()" name="addLocation" id="addLocation" class="btn btn-primary btn-lg">Add Your Location</button>
+   </div>
+     <div class="modal fade" id="addLocationModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title">Add Your Location</h4>
+                </div> <!-- /.modal-header -->
+                  <div class="modal-body">
+                     <div>
+                          <label class="control-label" for="name">Name:</label>
+                          <div>
+                            <input id="name" name="name" type="text" ng-model="myLocation.name" placeholder="No Data Loaded" class="form-control input-normal">
+                            <span class="help-block"></span>
+                          </div>
+                      </div>
+                      <div>
+                          <label class="control-label" for="comment">Comment:</label>
+                          <div>
+                            <textarea id="comment" name="comment" type="text" ng-model="myLocation.comment" placeholder="No Data Loaded" class="form-control input-md"/>
+                            <span class="help-block"></span>
+                          </div>
+                      </div>
+                      <div>
+                          <label class="control-label" for="address">Address:</label>
+                          <div>
+                            <textarea id="address" name="address" type="text" ng-model="myLocation.address" placeholder="No Data Loaded" class="form-control input-md"/>
+                            <span class="help-block"></span>
+                          </div>
+                      </div>
+                      <div>
+                          <label class="control-label" for="size">Size:</label>
+                          <div>
+                              <select name="size" id="size" ng-model="myLocation.size" class="form-control input-md" placeholder="No Data Loaded">
+                                <option>small</option>
+                                <option>medium</option>
+                                <option>large</option>
+                              </select>
+                            <span class="help-block"></span>
+                          </div>
+                      </div>
+                      <div>
+                          <label class="control-label" for="color">Color:</label>
+                          <div>
+                            <select name="color" id="color" ng-model="myLocation.color" class="form-control input-md" placeholder="No Data Loaded">
+                                <option>yellow</option>
+                                <option>red</option>
+                                <option>orange</option>
+                                <option>green</option>
+                                <option>blue</option>
+                                <option>gray</option>
+                                <option>black</option>
+                                <option>white</option>
+                              </select>
+                            <span class="help-block"></span>
+                          </div>
+                      </div>          
+                  </div><!-- /.modal-body -->
+                  <div class="modal-footer">
+                    <button ng-click="AddMyPoint()" name="saveLocation" id="saveLocation" class="btn btn-primary btn-lg">Save</button>
+                  </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
 
 </div>
