--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -683,3 +683,8 @@ a:after {
   left:10px;
   z-index:100
   }
+
+/*hide loading*/
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
