--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -648,7 +648,12 @@ a:after {
 
 /*Leaflet CSS*/
 #map.fullscreen{
-  height: 600px;
+
+  height: 550px;
+}
+
+#addLocation {
+ top: 51px;   
 }
 
 #map.embed{
@@ -666,7 +671,7 @@ a:after {
 .save {
   position:absolute;
   top:100px;
-  right:10px;
+  left:200px;
   z-index:100
   }
 .share {
