Fixed Bug with carriage returns Changed to Buffalo Wordlist for URLS Added Input to Edit Page for Map Name

--- a/views/edit.html
+++ b/views/edit.html
@@ -9,8 +9,21 @@
      <div id='table' class='ui-table'></div>
   </div>
 
+  <!-- Map Name
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="col-xs-3 control-label" for="title">Map Name:</label>
+      <div class="col-xs-6">
+      <input id="title" name="title" type="text" ng-keypress="clear()" ng-model="thisMap.mapName" placeholder="What's this map about?" class="form-control input-normal">
+      <span class="help-block"></span>
+      </div>
+    </div>
+  </form>
+  -->
+
   <!-- Map Details -->
   <button data-toggle="modal" href="#myModal" class="btn btn-primary config">Configure</button>
+  <h2>{{thisMap.mapName}}</h2>
   <!-- Save Button -->
   <button class="btn btn-success save" ng-click="saveTable()" >Save</button>
 
@@ -29,7 +42,7 @@
                 <legend>Map Options</legend>
 
                 <div class="form-group">
-                  <label class="col-xs-3 control-label" for="title">Map Title:</label>
+                  <label class="col-xs-3 control-label" for="title">Map Name:</label>
                   <div class="col-xs-6">
                   <input id="title" name="title" type="text" ng-keypress="clear()" ng-model="thisMap.mapName" placeholder="What's this map about?" class="form-control input-normal">
                   <span class="help-block"></span>
